--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "app"
+name = "ReverseProxy"
 version = "0.1.0"
-description = "A Tauri App"
+description = "A Tauri application with a reverse proxy GUI"
 authors = ["you"]
 license = ""
 repository = ""
